--- a/Resources/views/UserWeight/index.html.twig
+++ b/Resources/views/UserWeight/index.html.twig
@@ -34,7 +34,7 @@
                 // lines.symbols[0][1].animate({fill: "#f00"}, 1000);
             };</script>
 <div id="holder"></div>
-<h1>UserWeight list</h1>
+<h1>RunnerWeight list</h1>
 
 <table class="records_list">
     <thead>
