--- a/Resources/views/UserWeight/show.html.twig
+++ b/Resources/views/UserWeight/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'SFCapBundle::cap.html.twig' %}
 {% block body %}
-<h1>UserWeight</h1>
+<h1>RunnerWeight</h1>
 
 <table class="record_properties">
     <tbody>
