--- a/Resources/public/css/cap.css
+++ b/Resources/public/css/cap.css
@@ -65,6 +65,17 @@ body{
 	top:30%;
 	z-index:100;
 }
+.addToFavorites{
+	cursor:pointer;
+}
+#notMyData{
+	text-align:right;
+	font-size:.9em;
+	color:#aaa;
+}
+#anonymousInfo{
+
+}
 @media(max-width:768px){
 	#summaryInner{
 		width:100%;
@@ -75,5 +86,11 @@ body{
 	}
 	#SFSliderMoins{
 		display:none;
+	}
+	#notMyData{
+		text-align:left;
+	}
+	#anonymousInfo{
+		font-size:.8em;
 	}
 }
