on passe le gabarit global dans l'app

--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'SFCapBundle::cap.html.twig' %}
-{% block body %}
+{% block content %}
   {% include 'SFCapBundle:Default:warningAnonymous.html.twig' with {'runner': runner} %}
     <div class="row-fluid">
       <div class="span12">
