--- a/Resources/views/Sortie/index.html.twig
+++ b/Resources/views/Sortie/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'SFCapBundle::cap.html.twig' %}
-{% block body %}
+{% block content %}
 <h1>{{'runs.user.list'|trans}}</h1>
 
 <table class="table table-striped">
