--- a/Resources/views/Sortie/show.html.twig
+++ b/Resources/views/Sortie/show.html.twig
@@ -1,5 +1,5 @@
 {% extends 'SFCapBundle::cap.html.twig' %}
-{% block body %}
+{% block content %}
 <h1>Sortie</h1>
 
 <table class="record_properties">
