--- a/Resources/views/GeoTracker/index.html.twig
+++ b/Resources/views/GeoTracker/index.html.twig
@@ -1,7 +1,10 @@
 {% extends 'SFCapBundle::cap.html.twig' %}
 {% block content %}
 <script src="https://raw.github.com/andris9/jStorage/master/jstorage.js"></script>
-  <button class="btn btn-primary btn-large" id="chronoBtn">Démarrer</button>
+  <div id="gpsState"></div>
+  <button class="btn btn-primary btn-large" id="chronoBtnStart">Démarrer</button>
+  <button class="btn" id="chronoBtnEnd">Terminer</button>
+
   <div id="chrono">
     <span class="digits" id="hours">0</span>:<span class="digits" id="minutes">00</span>:<span class="digits" id="seconds">00</span>
   </div>
@@ -19,10 +22,10 @@
     </tbody>
   </table>
   <script>
-  $(navigator.geolocation.watchPosition(function(position) {
-    store(position.coords.latitude, position.coords.longitude);
-  }));
-  $.jStorage.deleteKey("geoloc");
+  var watchId = navigator.geolocation.watchPosition(function(position) {
+      store(position.coords.latitude, position.coords.longitude);
+  });
+  //$.jStorage.deleteKey("geoloc");
   var chronoIsRunning=false;
   var runSeconds=0;
   var runChrono = function(){
@@ -42,44 +45,71 @@
   var geolocValues=new Array();
   var pauseChrono = function(){
   }
-  $("#chronoBtn").click(function(){
+  $("#chronoBtnStart").click(function(){
     if(chronoIsRunning){
       chronoIsRunning=false;
       pauseChrono();
-      $("#chronoBtn").html("reprendre");
+      $("#chronoBtnStart").html("reprendre");
+      $("#chronoBtnEnd").show();
+      $("#chronoBtnEnd").addClass("btn-primary");
+      $("#chronoBtnEnd").addClass("btn-large");
     }else{
       chronoIsRunning=true;
       runChrono();
-      $("#chronoBtn").html("pause");
+      $("#chronoBtnStart").html("pause");
+      $("#chronoBtnEnd").hide();
+      $("#chronoBtnEnd").removeClass("btn-primary");
+      $("#chronoBtnEnd").removeClass("btn-large");
     }
+  });
+  $("#chronoBtnEnd").click(function(){
+    chronoIsRunning=false;
+    pauseChrono();
+    //$("#chronoBtnStart").remove();
+    //$(this).remove();
+    //$(navigator.geolocation.clearWatch(watchId));
   });
 function store(x,y){
   if(x && y){
     // Distance avec la précédente :
     if($("#xylist .step:last").length){
       var lastStep=$("#xylist .step:first .stepNumber").html();
+      var lastStepDistance=$("#xylist .step:first .stepDistance").html();
       var lastLat=$("#xylist .step:first .latitude").html();
       var lastLon=$("#xylist .step:first .longitude").html();
-      var stepDistance=distance(lastLat,lastLon,x,y);
+      var stepDistance=geoDistance(lastLat,lastLon,x,y);
       var totalDistance=$("#xylist .step:first .totalDistance").html()*1.0+stepDistance;
     }else{
       var stepDistance=0;
       var totalDistance=0;
       var lastStep=0;
+      var lastStepDistance=0;
     }
-    //On affiche
-    if($("#xylist .step:first").length){
-      //$("#xylist .step:first").remove();
+    if(chronoIsRunning){
+      //On affiche
+      if($("#xylist .step:first").length){
+        //$("#xylist .step:first").remove();
+      }
+      $("#xylist").prepend("<tr class=\"step\"><td class=\"stepNumber\">" + (lastStep*1.0+1) + "</td><td class=\"stepDistance\">" + stepDistance + "</td><td class=\"totalDistance\">" + totalDistance + "</td><td class=\"latitude\">" + x + "</td><td class=\"longitude\">" + y + "</td></tr>");
+      // On mémorise
+      geolocValues.push(new Array(x,y));
+      //$.jStorage.set("geoloc",geolocValues);
+    }else{
+      if(stepDistance>1){
+        $("#gpsState").html("acquisition position en cours... ...(précision : " + stepDistance + "m)");
+        $("#chronoBtnStart").html("attendez  sans vous déplacer svp");
+        $("#chronoBtnStart").attr("disabled","disabled");
+      }else{
+        $("#gpsState").html("GPS OK (précision : " + stepDistance + "m)");
+        $("#chronoBtnStart").html("attendez sans vous déplacer svp");
+        $("#chronoBtnStart").removeAttr("disabled");
+      }
     }
-    $("#xylist").prepend("<tr class=\"step\"><td class=\"stepNumber\">" + (lastStep*1.0+1) + "</td><td class=\"stepDistance\">" + stepDistance + "</td><td class=\"totalDistance\">" + totalDistance + "</td><td class=\"latitude\">" + x + "</td><td class=\"longitude\">" + y + "</td></tr>");
-    // On mémorise
-    geolocValues.push(new Array(x,y));
-    $.jStorage.set("geoloc",geolocValues);
   }else{
     $("#xylist").prepend("<tr><td>inconnu</td><td>inconnu</td></tr>");
   }
 }
-function distance(lat1,lon1,lat2,lon2) {
+function geoDistance(lat1,lon1,lat2,lon2) {
   var R = 6371; // km (change this constant to get miles)
   var dLat = (lat2-lat1) * Math.PI / 180;
   var dLon = (lon2-lon1) * Math.PI / 180;
