--- a/Resources/views/cap.html.twig
+++ b/Resources/views/cap.html.twig
@@ -25,6 +25,8 @@
             </p>
             <ul class="nav">
               <li><a href="{{ path('sf_cap_homepage') }}">{{'header.link.home'|trans}}</a></li>
+              <li><a href="{{ path('goal_badges') }}">Badges</a></li>
+              <!--<li><a href="{{ path('goals') }}">Objectifs</a></li>-->
               <!--<li><a href="/about">{{'header.link.about'|trans}}</a></li>
               <li><a href="/contact">{{'header.link.contact'|trans}}</a></li>-->
             </ul>
