--- a/Resources/views/UserWeight/show.html.twig
+++ b/Resources/views/UserWeight/show.html.twig
@@ -14,7 +14,7 @@
         </tr>
         <tr>
             <th>Date</th>
-            <td>{{ entity.date|date('Y-m-d H:i:s') }}</td>
+            <td>{{ entity.date|localeDate }}</td>
         </tr>
     </tbody>
 </table>
