--- a/Resources/views/Sortie/show.html.twig
+++ b/Resources/views/Sortie/show.html.twig
@@ -10,7 +10,7 @@
         </tr>
         <tr>
             <th>Date</th>
-            <td>{{ entity.date|date('Y-m-d H:i:s') }}</td>
+            <td>{{ entity.date|localeDate }}</td>
         </tr>
         <tr>
             <th>Duration</th>
