--- a/Resources/views/UserWeight/index.html.twig
+++ b/Resources/views/UserWeight/index.html.twig
@@ -50,7 +50,7 @@
         <tr>
             <td><a href="{{ path('weight_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
             <td>{{ entity.weight }}</td>
-            <td>{% if entity.date %}{{ entity.date|date('Y-m-d H:i:s') }}{% endif %}</td>
+            <td>{% if entity.date %}{{ entity.date|localeDate }}{% endif %}</td>
             <td>
                 <ul>
                     <li>
