--- a/Resources/public/css/cap.css
+++ b/Resources/public/css/cap.css
@@ -1,5 +1,10 @@
 body{
 	font-family: 'Montserrat Alternates', sans-serif;
+	padding-top: 60px;
+	padding-bottom: 40px;
+}
+.sidebar-nav {
+	padding: 9px 0;
 }
 .keyNumberContainer{
 }
